[tool.poetry]
name = "flora-api"
version = "1.0.0"
description = "API for the Flora site to store art works"
authors = ["Artemowkin <artyom.groshev2017@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
psycopg2-binary = "^2.9.2"
djangorestframework = "^3.13.1"
PyYAML = "^6.0"
uritemplate = "^4.1.1"
Pillow = "^8.4.0"
django-cors-headers = "^3.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
